# pegas

./: .gitignore  LICENSE  README.md
data/11.19.2013/: heap_sysd_performance.txt  readme  test_log.txt
data/11.24.2013/: heap_buddy_performance.txt  heap_llrb_performance.txt  heap_sysd_performance.txt  test_log.txt
data/9.1.2013/: test_log.txt
mak/: cmake_build.bat
src/: CMakeLists.txt
src/cntr/: CMakeLists.txt  _234tree.c  _234tree.h  cattr.h  citer_base.c  citer_base.h  citer_base.local.h  citer_cont.c  citer_cont.h  citer_cont.local.h  cntr.h  cntr_234tree.c  cntr_algorithm.c  cntr_algorithm.h  cntr_array.c  cntr_base.c  cntr_base.h  cntr_base.local.h  cntr_bstree.c  cntr_factory.h  cntr_linear.c  cntr_linear.h  cntr_linear.local.h  cntr_list.c  cntr_llrb.c  cntr_rbtree.c  cntr_tree.h  oo_model.doc.h  oos_model.c  oos_model.doc.h  oos_model.h
src/cntr2/: ialgo.c  ialgo.h  iallocator.c  iallocator.h  iarray.c  iarray.h  idef.h  ifactory.h  iitr.c  iitr.h  ilist.c  ilist.h  imap.c  imap.h  iobject.c  iobject.h  iqueue.c  iqueue.h  iset.c  iset.h  istack.c  istack.h  oallocator.c  oallocator.h  oarray.c  oarray.h  olist.c  olist.c.orig  olist.h  ollrb.c  ollrb.h  omap.c  omap.h  oo_bridge.c  oo_bridge.h  oo_haha.h  oo_model.c  oo_model.h  oo_model2.h  oo_model3.h  (+6 more)
src/lexer/: automaton.c  automaton.c.disable  automaton.h  nfa.c  nfa.c.disable  nfa.h
src/memheap/: block_common.c  block_common.h  block_link.c  block_link.h  heap.h  heap_buddy.c  heap_buddy.h  heap_def.h  heap_factory.c  heap_factory.h  heap_global.c  heap_global.h  heap_llrb.c  heap_llrb.h  heap_memlist.h  heap_pool.c  heap_pool.h  heap_sys.c  heap_sys.h  heap_walk.c  heap_walk.h  heap_wrap.c  heap_wrap.h  todo.txt
src/oop/: cls_builtintype.c  cls_builtintype.h  oo_model2.c  oo_model2.h  ptc_basic.c  ptc_basic.h  ptc_iterator.c  ptc_iterator.h  ptc_list.c  ptc_list.h
src/oop/ideas/: oo_model_try1.h
src/ooworld/: cls_builtintype.c  cls_builtintype.h  oo_model2.h  ptc_basic.c  ptc_basic.h
src/regex/: dfa.c  fa.h  fatable.c  fatable.h  main.c  nfa.c  nfastack.c  nfastack.h  node.c  prog.c  prog.h  regc.c  regc.h
src/util/: bit_math.c  bit_math.h  bst_link.c  bst_link.h  cominc.c  cominc.h  link.doc.h  list_link.c  list_link.h  llrb_link.c  llrb_link.h  math.h  skiplink.c  skiplist.c  skiplist.h  splay_link.c  splay_link.h
tests/: test_main.c  test_util.c  test_util.h
(+77 files in other folders)
